# Keystone

./: .clang-format  .clang-tidy  .claude-followup-297.md  .clinerules  .cmakelint  .containerignore  .cppcheck-suppressions  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  OpenSSL-release-x86_64-data.cmake  README.md  SECURITY.md  benchmark-config.cmake  benchmark-release-x86_64-data.cmake  cnats-config-version.cmake  cnats-config.cmake  cnats-release-x86_64-data.cmake  cnatsTargets.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.py  concurrentqueue-Target-release.cmake  concurrentqueue-config.cmake  concurrentqueue-release-x86_64-data.cmake  concurrentqueueTargets.cmake  (+17 more)
.claude/agents/: agentic-workflows-orchestrator.md  algorithm-review-specialist.md  architecture-design.md  architecture-review-specialist.md  chief-architect.md  cicd-orchestrator.md  code-review-orchestrator.md  data-engineering-review-specialist.md  dependency-review-specialist.md  documentation-engineer.md  documentation-review-specialist.md  documentation-specialist.md  foundation-orchestrator.md  implementation-engineer.md  implementation-review-specialist.md  implementation-specialist.md  integration-design.md  junior-documentation-engineer.md  junior-implementation-engineer.md  junior-test-engineer.md  papers-orchestrator.md  performance-engineer.md  performance-review-specialist.md  performance-specialist.md  safety-review-specialist.md  security-design.md  security-review-specialist.md  security-specialist.md  senior-implementation-engineer.md  shared-library-orchestrator.md  test-engineer.md  test-review-specialist.md  test-specialist.md  tooling-orchestrator.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  _required.yml  build-and-test.yml  ci.yml  codeql-analysis.yml  dependency-audit.yml  extras.yml  merge-queue-smoke.yml  profiling-weekly.yml  release-please.yml  runner-smoke-test.yml  security-scan.yml
benchmarks/: README.md  distributed_work_stealing.cpp  hierarchy_performance.cpp  message_bus_performance.cpp  message_pool_performance.cpp  profile_allocations.cpp  registry_performance.cpp  resilience_performance.cpp  scheduler_backoff_benchmark.cpp  string_allocation_profiling.cpp
cmake/: KeystoneConfig.cmake.in  KeystoneConfigVersion.cmake.in
conan/profiles/: tsan
docs/: CICD_COVERAGE.md  CICD_QUALITY_GATES.md  DOCKER_TESTING.md  GLOSSARY.md  HEALTH_CHECKS.md  INTERFACE_SEGREGATION_MIGRATION.md  KUBERNETES_DEPLOYMENT.md  LOAD_TESTING.md  MESSAGE_PROTOCOL_EXTENSIONS.md  METRICS_SECURITY.md  MONITORING.md  NATS_TLS_SETUP.md  NETWORK_PROTOCOL.md  PACKAGING.md  PHASE_8_COMPLETE.md  PHASE_8_E2E_TESTS.md  PHASE_8_FINAL_STATUS.md  PHASE_8_IMPLEMENTATION_SUMMARY.md  PHASE_8_OPTIONAL_BUILD.md  PHASE_8_PROGRESS.md  PRODUCTION.md  README.md  VALIDATION_API.md  YAML_SPECIFICATION.md  nats-subjects.md
docs/phases/: phase-8-completion-summary.md  phase-A-D-completion.md
docs/plan/: README.md  build-system.md  error-handling.md  modules.md  risks.md  testing-strategy.md
docs/profiling/: P2-06-string-allocation-analysis.md
docs/runbooks/: README.md  high-error-rate.md  hmas-pods-down.md
docs/transport/: nats-connection.md
examples/multi_process_agents/: CMakeLists.txt  DEMO_RESULTS.md  README.md
examples/workflow-examples/: CMakeLists.txt  CODE_REVIEW_RESPONSE.md  README.md
fuzz/: README.md  fuzz_message_bus_routing.cpp  fuzz_message_serialization.cpp  fuzz_retry_policy.cpp  fuzz_subject_validator.cpp  fuzz_work_stealing.cpp
grafana/dashboards/: logs-dashboard.json
helm/projectkeystone/: Chart.yaml  README.md  values.yaml
include/agents/: agent_action_type.hpp  agent_awaitable.hpp  agent_core.hpp  agent_envelope.hpp  async_agent.hpp  chief_architect_agent.hpp  component_lead_agent.hpp  concepts.hpp  coordination_state.hpp  lead_agent_base.hpp  lead_agent_base_impl.hpp  module_lead_agent.hpp  task_agent.hpp  task_execution_strategy.hpp
include/concurrency/: logger.hpp  task.hpp  thread_pool.hpp  work_stealing_queue.hpp  work_stealing_scheduler.hpp
include/core/: agent_id_interning.hpp  agent_types.hpp  circuit_breaker.hpp  config.hpp  error_sanitizer.hpp  failure_injector.hpp  heartbeat_monitor.hpp  i_agent_registry.hpp  i_message_router.hpp  message.hpp  message_bus.hpp  message_serializer.hpp  message_sink.hpp  metrics.hpp  retry_policy.hpp  subject_validator.hpp
include/monitoring/: health_check_server.hpp  nats_status.hpp  prometheus_exporter.hpp
include/network/: grpc_client.hpp  hmas_coordinator_service.hpp  nats_listener.hpp  service_registry.hpp  task_phase_utils.hpp  yaml_parser.hpp
k8s/: alertmanager.yaml  configmap.yaml  deployment.yaml  grafana-dashboards-configmap.yaml  grafana.yaml  loki.yaml  metrics-security.yaml  namespace.yaml  networkpolicy.yaml  prometheus-alerts.yaml  prometheus.yaml  promtail.yaml  rbac.yaml  secrets-example.yaml  service.yaml  servicemonitor.yaml
monitoring/: prometheus.yml
proto/: common.proto
schemas/: hierarchical_task.yaml
scripts/: README.md  check-extraction.sh  check-install.sh  check-merge-queue-readiness.sh  create_phase_issues.sh  file_code_review_issues.sh  generate_coverage.sh  hmas-server.sh  lint-changelog.py  remove-preset-include.py  run_benchmarks.sh  run_static_analysis.sh  setup-env.sh  setup-notes.sh  test_docker.sh  verify_install.sh
src/agents/: agent_core.cpp  (+7 more)
src/daemon/: CMakeLists.txt  main.cpp
tests/: conftest.py  helpers.py  integration_test_task_claimer_rest_api.py  test_daemon.py  test_dag_walker.py  test_graceful_shutdown.py  test_logging.py  test_maestro_client.py  test_nats_listener.py  test_task_claimer.py  test_task_event.py  test_validation.py  test_version_bounds.py
tests/install/consumer/: CMakeLists.txt  smoke.cpp
(+186 files in other folders)
