[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectkeystone"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "nats-py>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0,<2",
    "conan>=2.28.1",
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0,<7",
    "pytest-timeout>=2.3,<3",
    "fastapi>=0.100.0",
    "httpx[asgi]>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/keystone --cov-report=term-missing --cov-report=xml --timeout=30 --timeout-method=thread"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "timeout: timeout marker for pytest (requires pytest-timeout)",
    "integration: marks tests as integration tests requiring HTTP stub (no real external services)",
]

[tool.coverage.run]
branch = true
source = ["src/keystone"]
omit = ["src/keystone/__main__.py"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "class .*\\(Protocol\\):",
    "\\.\\.\\.\\s*$",
]

[tool.setuptools.package-data]
keystone = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["conanfile.py"]

[[tool.mypy.overrides]]
module = ["conan.*"]
ignore_missing_imports = true

# Conan uses dynamic attribute access on options/settings; attr-defined is not useful here
[[tool.mypy.overrides]]
module = ["conanfile"]
disable_error_code = ["attr-defined"]
disallow_subclassing_any = false
