[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectkeystone"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0,<2",
    "conan>=2.28.1",
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<1",
    "pytest-timeout>=2.3,<3",
]

[tool.pytest.ini_options]
addopts = "--timeout=30 --timeout-method=thread"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "timeout: timeout marker for pytest (requires pytest-timeout)",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["conanfile.py"]

[[tool.mypy.overrides]]
module = ["conan.*"]
ignore_missing_imports = true

# Conan uses dynamic attribute access on options/settings; attr-defined is not useful here
[[tool.mypy.overrides]]
module = ["conanfile"]
disable_error_code = ["attr-defined"]
disallow_subclassing_any = false
